text additions/ making it neater
I have managed to get each "about" section of the page looking acceptable. I have added some new "headers" to each page- we can delete if you think they don't look good!
have moved the modal to the top as I believe it should be kept there

--- a/crabwears.html
+++ b/crabwears.html
@@ -27,13 +27,13 @@
               <a class="nav-link" href="#About-Crab">Crab...<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="crabwears.html">WEARS</a>
+              <a class="nav-link" href="crabwears.html">wears</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="crabdraws.html">DRAWS</a>
+              <a class="nav-link" href="crabdraws.html">draws</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="crabrecommends.html">RECOMMENDS</a>
+              <a class="nav-link" href="crabrecommends.html">recommends</a>
             </li>
           </ul>
           <span class="social-nav">
@@ -53,36 +53,50 @@
   <div class="parallax">
   </div>
 
-    <div class="contrast">
-
-<br>
-
-<div class="image1">
-<img src="images/fashionphotos.jpg">
-</div>
-
-<br>
-
-<h9>By now you'll have seen I'm a true trendsetter.
-  All of my friends look to <i>me</i>
-  to see what's en vogue.</h9>
-<h9>This season? It's rouge darling.</h9>
-  <br>
-<img src="images/aspinalcrab.jpg" alt="" class="img-fluid d-block w-100">
-  <br>
-<h8>I wanted it in red... #lol jokes. Red Aspinal always... as seen on me.</h8>
-<br>
-<img src="images/mycalveinscrab.jpg" class="img-fluid d-block w-100">
-<h9>Just chilling in #mycalveins</h9>
-<br>
-<img src="images/filacrab%202.jpg" style=image>
-<h8>Fila is your cue if you want to get waAvVyYY.</h8>
-
-<br>
-  <div class="col-2">
+<div contrast>
+  <div container>
+      <div class="row px-2">
+          <div class="col-sm">
+            <h12>i set trends.</12>
+            <img src="images/tommycrab.jpg" class="img-fluid imageshadow">
+          </div>
+          <div class="col-sm">
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <p>I'm a trendsetter.
+              <br>
+              <br>
+              People look to me
+              to see what's en vogue.</p>
+          </div>
+      </div>
   </div>
-</div>
-</div>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <h9>This season? It's rouge darling.</h9>
+            <br>
+            <img src="images/fashionphotos.jpg">
+            <br>
+            <img src="images/aspinalcrab.jpg" alt="" class="img-fluid d-block w-100">
+            <br>
+            <h8>I wanted it in red... #lol jokes. Red Aspinal always... as seen on me.</h8>
+            <br>
+            <img src="images/mycalveinscrab.jpg" class="img-fluid d-block w-100">
+            <h9>Just chilling in #mycalveins</h9>
+            <br>
+            <img src="images/filacrab%202.jpg" style=image>
+            <h8>Fila is your cue if you want to get waAvVyYY.</h8>
+  </div>
 <footer>
                <div class="container">
                  <div class="row">
