--- a/index.html
+++ b/index.html
@@ -21,42 +21,42 @@
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v3.2"></script>
 
-<!-- Navigation-->
-<nav class="navbar fixed-top navbar-expand-sm navbar-light" style="background-color: rgba(255, 255, 255, 0.9);">
-  <a class="navbar-brand" href="index.html"><img src="images/greyclaw.png" height="30" width ="30"></a>
+    <!-- Navigation-->
+        <nav class="navbar fixed-top navbar-expand-sm navbar-light" style="background-color: rgba(255, 255, 255, 0.9);">
+          <a class="navbar-brand" href="index.html"><img src="images/greyclaw.png" height="30" width ="30"></a>
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#About-Crab">Crab...<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="crabwears.html">WEARS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="crabdraws.html">DRAWS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="crabrecommends.html">RECOMMENDS</a>
-        </li>
-      </ul>
-      <span class="social-nav">
-        <a href="https://www.facebook.com/crab.obeverley"><img src="images/facebook-button.svg" height="30" alt="facebook button"></a>
-      </span>
-      <span class="social-nav">
-        <a href="https://twitter.com/CodeFirstGirls"><img src="images/twitter-button.svg" height="30" alt="twitter button"></a>
-      </span>
-      <span class="social-nav">
-        <a href="https://www.instagram.com/just_crab"><img src="images/instagram-button.svg" height="30" alt="instagram button"></a>
-      </span>
-    </div>
-  </div>
-</nav>
-<!--- End of Navigation --->
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                  <a class="nav-link" href="#About-Crab">Crab...<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="crabwears.html">wears</a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link" href="crabdraws.html">draws</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="crabrecommends.html">recommends</a>
+                </li>
+              </ul>
+              <span class="social-nav">
+                <a href="https://www.facebook.com/crab.obeverley"><img src="images/facebook-button.svg" height="30" alt="facebook button"></a>
+              </span>
+              <span class="social-nav">
+                <a href="https://twitter.com/CodeFirstGirls"><img src="images/twitter-button.svg" height="30" alt="twitter button"></a>
+              </span>
+              <span class="social-nav">
+                <a href="https://www.instagram.com/just_crab"><img src="images/instagram-button.svg" height="30" alt="instagram button"></a>
+              </span>
+            </div>
+          </div>
+        </nav>
+        <!--- End of Navigation --->
 
 
 <section id="my-carousel">
@@ -79,18 +79,15 @@
   <div class="contrast2">
     <div container>
       <div class="row px-2">
-        <div class="col-7">
+        <div class="col-sm">
             <h6>about me</h6>
             <img src="images/wokeuplikethiscrab.jpg" class="img-fluid imageshadow">
             </div>
-            <div class="col-5">
-              <p>I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this website is a platform where I can share with you aspects of my very busy and important life.</p>
+            <div class="col-sm">
+              <p><br><br>I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this website is a platform where I can share with you aspects of my very busy and important life.</p>
         </div>
         </div>
     </div>
-    <br>
-    <br>
-    <br>
     <br>
     <br>
     <br>
@@ -99,7 +96,8 @@
   <h6>follow me</h6>
   <br>
 </div>
-</section>
+</div>
+  </section>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -109,7 +107,6 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</div>
 </body>
 <footer>
                <div class="container">
