--- a/crabrecommends.html
+++ b/crabrecommends.html
@@ -7,10 +7,10 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <!-- CSS stylesheet -->
+  <!-- CSS stylesheet -->
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <title>Crab Recommends</title>
   </head>
 
@@ -30,13 +30,13 @@
               <a class="nav-link" href="#About-Crab">Crab...<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="crabwears.html">WEARS</a>
+              <a class="nav-link" href="crabwears.html">wears</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="crabdraws.html">DRAWS</a>
+              <a class="nav-link" href="crabdraws.html">draws</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="crabrecommends.html">RECOMMENDS</a>
+              <a class="nav-link" href="crabrecommends.html">recommends</a>
             </li>
           </ul>
           <span class="social-nav">
@@ -62,14 +62,19 @@
     <div class="contrast">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-7">
+          <div class="col-sm">
             <img src="images/pensivereviewcrab.jpg" class="img-fluid imageshadow2">
           </div>
-            <div class="col-5">
-              <h3><br><br>As an intensely cultural crab, I feel it is my duty to impart some of my wisdom to you through a few reviews.
-                </h3>
+            <div class="col-sm">
+              <p>As an intensely cultural crab, I feel it is my duty to impart some of my wisdom to you through a few reviews.
+              </p>
               </div>
             </div>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
           <br>
       <div class="card-deck">
         <div class="card">
@@ -77,8 +82,8 @@
             <div class="card-body">
                 <h5 class="card-title">Ken Kiff: The Sequence • Sainsbury Centre • 17th November – Sunday 21st April</h5>
                 <span id="dots"></span><span id="more">
-                  <p2 class="card-text">Shown in it’s closest proximity to completeness yet, the 60 piece series of paintings from Ken Kiff’s  Sequence at the Sainsbury Centre is well worth the trip (and was also for me a wonderful excuse to discover the delights of Norwich). Despite his paintings are often unrealistic and illogical, to the point that on first glance they appear almost childish, fusing sensitive application of colour allows them to sing for themselves. The effect of joyful colour palette, combined with his strange, and often slightly unsavoury subject matter emphasises an arresting fusion of various juxtapositions the beautiful and ugly, the fantastical and everyday banality.
-                  </span></p2>
+                  <p2 class="card-text">Shown in it’s closest proximity to completeness yet, this compilation of 60 paintings from Ken Kiff’s Sequence at the Sainsbury Centre is well worth the trip (and was also for me a wonderful excuse to discover the delights of Norwich). Despite the fact that his paintings are often unrealistic and illogical, to the point that on first glance they appear almost childish, Kiff’s sensitive and expressive application of paint allows the colours to sing for themselves. Kiff’s joyful colour palette, combined with his strange, and often slightly unsavoury subject matter creates an arresting fusion of various juxtapositions –the beautiful with the ugly, the tender with the cruel, and the fantastical amongst the banality of the everyday. Kiff’s paintings are brimming with narratives, which manage to be both conflicting and harmonious. It is perhaps due to his ability to create such an imaginative space, so filled with the contrariness and arbitrariness of life that people find his work so appealing, and relatable. Whilst very revered in his day for bridging the gaps between Abstract Expressionism and Modernism, and as one of the fore-runners for the return to figurative painting, Kiff sadly seems to have slipped into obscurity in the public’s recent collective consciousness—all the more reason to see these works, many of which are in private collections, before they disappear again.
+                    </span></p2>
                     <button type="button" onclick="seemore()" id="myBtn">Read more</button>
             </div>
           </div>
@@ -138,99 +143,6 @@
 </div>
     </div>
   </div>
-
-<script>
-function seemore() {
-  var dots = document.getElementById("dots");
-  var moreText = document.getElementById("more");
-  var btnText = document.getElementById("myBtn");
-
-  if (dots.style.display === "none") {
-    dots.style.display = "inline";
-    btnText.innerHTML = "Read more";
-    moreText.style.display = "none";
-  } else {
-    dots.style.display = "none";
-    btnText.innerHTML = "Read less";
-    moreText.style.display = "inline";
-  }
-}
-function seemore2() {
-  var dots2 = document.getElementById("dots2");
-  var moreText2 = document.getElementById("more2");
-  var btnText2 = document.getElementById("myBtn2");
-
-  if (dots2.style.display === "none") {
-  dots2.style.display = "inline";
-  btnText2.innerHTML = "Read more";
-  moreText2.style.display = "none";
-  } else {
-  dots2.style.display = "none";
-  btnText2.innerHTML = "Read less";
-  moreText2.style.display = "inline";
-  }
-}
-function seemore3() {
-  var dots3 = document.getElementById("dots3");
-  var moreText3 = document.getElementById("more3");
-  var btnText3 = document.getElementById("myBtn3");
-
-  if (dots3.style.display === "none") {
-    dots3.style.display = "inline";
-    btnText3.innerHTML = "Read more";
-    moreText3.style.display = "none";
-  } else {
-    dots3.style.display = "none";
-    btnText3.innerHTML = "Read less";
-    moreText3.style.display = "inline";
-  }
-}
-function seemore4() {
-  var dots4 = document.getElementById("dots4");
-  var moreText4 = document.getElementById("more4");
-  var btnText4 = document.getElementById("myBtn4");
-
-  if (dots4.style.display === "none") {
-    dots4.style.display = "inline";
-    btnText4.innerHTML = "Read more";
-    moreText4.style.display = "none";
-  } else {
-    dots4.style.display = "none";
-    btnText4.innerHTML = "Read less";
-    moreText4.style.display = "inline";
-  }
-}
-function seemore5() {
-  var dots5 = document.getElementById("dots5");
-  var moreText5 = document.getElementById("more5");
-  var btnText5 = document.getElementById("myBtn5");
-
-  if (dots5.style.display === "none") {
-    dots5.style.display = "inline";
-    btnText5.innerHTML = "Read more";
-    moreText5.style.display = "none";
-  } else {
-    dots5.style.display = "none";
-    btnText5.innerHTML = "Read less";
-    moreText5.style.display = "inline";
-  }
-}
-function seemore6() {
-  var dots6 = document.getElementById("dots6");
-  var moreText6 = document.getElementById("more6");
-  var btnText6 = document.getElementById("myBtn6");
-
-  if (dots6.style.display === "none") {
-    dots6.style.display = "inline";
-    btnText6.innerHTML = "Read more";
-    moreText6.style.display = "none";
-  } else {
-    dots6.style.display = "none";
-    btnText6.innerHTML = "Read less";
-    moreText6.style.display = "inline";
-  }
-}
-</script>
 </body>
 <footer>
                <div class="container">
@@ -250,4 +162,96 @@ function seemore6() {
                    </div>
                </div>
            </footer>
+           <script>
+           function seemore() {
+             var dots = document.getElementById("dots");
+             var moreText = document.getElementById("more");
+             var btnText = document.getElementById("myBtn");
+
+             if (dots.style.display === "none") {
+               dots.style.display = "inline";
+               btnText.innerHTML = "Read more";
+               moreText.style.display = "none";
+             } else {
+               dots.style.display = "none";
+               btnText.innerHTML = "Read less";
+               moreText.style.display = "inline";
+             }
+           }
+           function seemore2() {
+             var dots2 = document.getElementById("dots2");
+             var moreText2 = document.getElementById("more2");
+             var btnText2 = document.getElementById("myBtn2");
+
+             if (dots2.style.display === "none") {
+             dots2.style.display = "inline";
+             btnText2.innerHTML = "Read more";
+             moreText2.style.display = "none";
+             } else {
+             dots2.style.display = "none";
+             btnText2.innerHTML = "Read less";
+             moreText2.style.display = "inline";
+             }
+           }
+           function seemore3() {
+             var dots3 = document.getElementById("dots3");
+             var moreText3 = document.getElementById("more3");
+             var btnText3 = document.getElementById("myBtn3");
+
+             if (dots3.style.display === "none") {
+               dots3.style.display = "inline";
+               btnText3.innerHTML = "Read more";
+               moreText3.style.display = "none";
+             } else {
+               dots3.style.display = "none";
+               btnText3.innerHTML = "Read less";
+               moreText3.style.display = "inline";
+             }
+           }
+           function seemore4() {
+             var dots4 = document.getElementById("dots4");
+             var moreText4 = document.getElementById("more4");
+             var btnText4 = document.getElementById("myBtn4");
+
+             if (dots4.style.display === "none") {
+               dots4.style.display = "inline";
+               btnText4.innerHTML = "Read more";
+               moreText4.style.display = "none";
+             } else {
+               dots4.style.display = "none";
+               btnText4.innerHTML = "Read less";
+               moreText4.style.display = "inline";
+             }
+           }
+           function seemore5() {
+             var dots5 = document.getElementById("dots5");
+             var moreText5 = document.getElementById("more5");
+             var btnText5 = document.getElementById("myBtn5");
+
+             if (dots5.style.display === "none") {
+               dots5.style.display = "inline";
+               btnText5.innerHTML = "Read more";
+               moreText5.style.display = "none";
+             } else {
+               dots5.style.display = "none";
+               btnText5.innerHTML = "Read less";
+               moreText5.style.display = "inline";
+             }
+           }
+           function seemore6() {
+             var dots6 = document.getElementById("dots6");
+             var moreText6 = document.getElementById("more6");
+             var btnText6 = document.getElementById("myBtn6");
+
+             if (dots6.style.display === "none") {
+               dots6.style.display = "inline";
+               btnText6.innerHTML = "Read more";
+               moreText6.style.display = "none";
+             } else {
+               dots6.style.display = "none";
+               btnText6.innerHTML = "Read less";
+               moreText6.style.display = "inline";
+             }
+           }
+           </script>
 </html>
