deleted attempts to fix navbar

--- a/crashion.html
+++ b/crashion.html
@@ -63,3 +63,24 @@ I wanted it in red... #lol jokes. Red Aspinal always... as seen on me.
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
       </div>
       </body>
+
+deleted css when tidying
+
+      #demobox2 {
+        background-color: (255, 0, 0, 0.4);
+        width: 700px;
+        height: 650px;
+        right: 470px;
+        top: 90px;
+        position: absolute;
+        display: block;
+      }
+
+      /* transparent box for formating */
+      #demobox3 {
+        background-color: white; opacity: 0;
+        width: 700px;
+        height: 650px;
+        right: 470px;
+        top: 90px;
+      }
