--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </li>
               </ul>
               <span class="social-nav">
-                <a href="https://www.facebook.com/crab.obeverley"><img src="images/facebook-button.svg" height="30" alt="facebook button"></a>
+                <a href="https://www.facebook.com/crab.obeverley"><img src="images/facebook-button.svg" height="30" width="30" alt="facebook button"></a>
               </span>
               <span class="social-nav">
                 <a href="https://twitter.com/CodeFirstGirls"><img src="images/twitter-button.svg" height="30" alt="twitter button"></a>
