made the 'read more' buttons slightly better

--- a/crabwears.html
+++ b/crabwears.html
@@ -53,6 +53,7 @@
   <div class="parallax">
   </div>
 
+<section id=Crab Wears>
 <div contrast>
   <div container>
       <div class="row px-2">
@@ -73,30 +74,26 @@
               to see what's en vogue.</p>
           </div>
       </div>
-  </div>
+    </div>
           <br>
           <br>
           <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <h9>This season? It's rouge darling.</h9>
-            <br>
+          <div>
             <img src="images/fashionphotos.jpg">
+              <h9>This season? It's rouge darling.</h9>
             <br>
             <img src="images/aspinalcrab.jpg" alt="" class="img-fluid d-block w-100">
             <br>
-            <h8>I wanted it in red... #lol jokes. Red Aspinal always... as seen on me.</h8>
+            <h9>I wanted it in red... #lol jokes. Red Aspinal always... as seen on me.</h9>
             <br>
             <img src="images/mycalveinscrab.jpg" class="img-fluid d-block w-100">
             <h9>Just chilling in #mycalveins</h9>
             <br>
             <img src="images/filacrab%202.jpg" style=image>
-            <h8>Fila is your cue if you want to get waAvVyYY.</h8>
-  </div>
+            <h9>Fila is your cue if you want to get waAvVyYY.</h9>
+          </div>
+</div>
+</section>
 <footer>
                <div class="container">
                  <div class="row">
@@ -105,8 +102,8 @@
                            <ul class="list-inline social">
                                    <a href="https://www.instagram.com/just_crab_/" target="_blank"><i class="fa fa-instagram fa-fw fa-2x"></i></a>
                                    <a href="https://twitter.com/CodeFirstGirls" target="_blank"><i class="fa fa-twitter fa-fw fa-2x"></i></a>
-                                  <a href="https://www.facebook.com/codefirstgirls/" target="_blank"><i class="fa fa-facebook fa-fw fa-2x"></i></a>
-                                  <a href="mailto:crab@justcrab.com" target="_blank"><i class="fa fa-envelope-o fa-fw fa-2x"></i></a>
+                                   <a href="https://www.facebook.com/codefirstgirls/" target="_blank"><i class="fa fa-facebook fa-fw fa-2x"></i></a>
+                                   <a href="mailto:crab@justcrab.com" target="_blank"><i class="fa fa-envelope-o fa-fw fa-2x"></i></a>
 
                           </ul>
 <div class:"footerline":>
