contrasts all working

--- a/crabdraws.html
+++ b/crabdraws.html
@@ -147,7 +147,6 @@
                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                  <span class="navbar-toggler-icon"></span>
                </button>
-
                <div class="collapse navbar-collapse" id="navbarSupportedContent">
                  <ul class="navbar-nav mr-auto">
                    <li class="nav-item">
@@ -184,6 +183,7 @@
     </div>
       <br>
       <br>
+      <div class="contrast">
         <div container>
           <div class="row">
             <div class="col-sm">
@@ -197,12 +197,10 @@
       </div>
     </div>
       <br>
-      <br><h10>fancy doing some of your own do-gooding by buying a picture?</h10><br>
+      <br><br><br><br><h10>fancy doing some of your own do-gooding by buying a picture?</h10><br><br>
       <br>
-    <!-- Button trigger modal -->
-    <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#exampleModal">Get in touch!</button>
-    <!--testing hover. HOW TO GRID-->
-<div contrast>
+    <!--- Button trigger modal --->
+    <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#exampleModal">Get in touch!</button><br><br><br
           <div class="container">
             <div class="row">
               <div class="col-sm">
@@ -215,7 +213,6 @@
                 </div>
 
               </div>
-            </div>
             <div class="col-sm">
               <div class="hovercontainer">
                 <img src="images/giraffe1.jpg" alt="Avatar" class="image">
@@ -235,9 +232,7 @@
             </div>
           </div>
         </div>
-
         <br>
-
         <div class="row">
           <div class="col-sm">
             <div class="hovercontainer">
@@ -268,28 +263,11 @@
           </div>
         </div>
       </div>
+    </div>
+
 
 
       <br>
-
-      <footer>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-10 col-lg-offset-1 text-center">
-            <br>
-            <ul class="list-inline social">
-              <a href="https://www.instagram.com/just_crab_/" target="_blank"><i class="fa fa-instagram fa-fw fa-2x"></i></a>
-              <a href="https://twitter.com/CodeFirstGirls" target="_blank"><i class="fa fa-twitter fa-fw fa-2x"></i></a>
-              <a href="https://www.facebook.com/codefirstgirls/" target="_blank"><i class="fa fa-facebook fa-fw fa-2x"></i></a>
-              <a href="mailto:crab@justcrab.com" target="_blank"><i class="fa fa-envelope-o fa-fw fa-2x"></i></a>
-            </ul>
-            <div class:"footerline":>
-              <p style="font-size:50%;text-align:left">Copyright © Consufashun 2018</p>
-            </div>
-            </div>
-          </div>
-         </div>
-      </footer>
 
 
             <!-- Optional JavaScript -->
@@ -303,4 +281,22 @@
 
     <script src="https://getbootstrap.com/docs/4.1/dist/js/bootstrap.min.js"></script>
     </body>
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-10 col-lg-offset-1 text-center">
+          <br>
+          <ul class="list-inline social">
+            <a href="https://www.instagram.com/just_crab_/" target="_blank"><i class="fa fa-instagram fa-fw fa-2x"></i></a>
+            <a href="https://twitter.com/CodeFirstGirls" target="_blank"><i class="fa fa-twitter fa-fw fa-2x"></i></a>
+            <a href="https://www.facebook.com/codefirstgirls/" target="_blank"><i class="fa fa-facebook fa-fw fa-2x"></i></a>
+            <a href="mailto:crab@justcrab.com" target="_blank"><i class="fa fa-envelope-o fa-fw fa-2x"></i></a>
+          </ul>
+          <div class:"footerline":>
+            <p style="font-size:50%;text-align:left">Copyright © Consufashun 2018</p>
+          </div>
+          </div>
+        </div>
+       </div>
+    </footer>
     </html>
