--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </div>
 </section>
 <section id=About-Crab>
-  <div class="contrast2">
+  <div class="contrast">
     <div container>
       <div class="row px-2">
         <div class="col-sm">
@@ -91,11 +91,10 @@
     <br>
     <br>
     <br>
-
-<div id="pixlee_container">
-  <h6>follow me</h6>
-  <br>
-</div>
+      <div id="pixlee_container">
+        <h6>follow me</h6>
+        <br>
+      </div>
 </div>
   </section>
 
