--- a/crabwears.html
+++ b/crabwears.html
@@ -54,7 +54,7 @@
   </div>
 
 <section id=Crab Wears>
-<div contrast>
+<div class="contrast">
   <div container>
       <div class="row px-2">
           <div class="col-sm">
@@ -94,30 +94,29 @@
           </div>
 </div>
 </section>
-<footer>
-               <div class="container">
-                 <div class="row">
-                  <div class="col-lg-10 col-lg-offset-1 text-center">
-                         <br>
-                           <ul class="list-inline social">
-                                   <a href="https://www.instagram.com/just_crab_/" target="_blank"><i class="fa fa-instagram fa-fw fa-2x"></i></a>
-                                   <a href="https://twitter.com/CodeFirstGirls" target="_blank"><i class="fa fa-twitter fa-fw fa-2x"></i></a>
-                                   <a href="https://www.facebook.com/codefirstgirls/" target="_blank"><i class="fa fa-facebook fa-fw fa-2x"></i></a>
-                                   <a href="mailto:crab@justcrab.com" target="_blank"><i class="fa fa-envelope-o fa-fw fa-2x"></i></a>
-
-                          </ul>
-<div class:"footerline":>
-<p style="font-size:50%;text-align:left">Copyright © Consufashun 2018</p>
-</div>
-                       </div>
-                   </div>
-               </div>
-           </footer>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
+  <footer>
+                 <div class="container">
+                   <div class="row">
+                    <div class="col-lg-10 col-lg-offset-1 text-center">
+                           <br>
+                             <ul class="list-inline social">
+                                     <a href="https://www.instagram.com/just_crab_/" target="_blank"><i class="fa fa-instagram fa-fw fa-2x"></i></a>
+                                     <a href="https://twitter.com/CodeFirstGirls" target="_blank"><i class="fa fa-twitter fa-fw fa-2x"></i></a>
+                                     <a href="https://www.facebook.com/codefirstgirls/" target="_blank"><i class="fa fa-facebook fa-fw fa-2x"></i></a>
+                                     <a href="mailto:crab@justcrab.com" target="_blank"><i class="fa fa-envelope-o fa-fw fa-2x"></i></a>
 
+                            </ul>
+  <div class:"footerline":>
+  <p style="font-size:50%;text-align:left">Copyright © Consufashun 2018</p>
+  </div>
+                         </div>
+                     </div>
+                 </div>
+             </footer>
 </html>
