--- a/crabwears.html
+++ b/crabwears.html
@@ -13,47 +13,49 @@
     <title>Crab Wears</title>
   </head>
   <body>
+
     <!-- Navigation-->
-    <nav class="navbar fixed-top navbar-expand-sm navbar-light" style="background-color: rgba(255, 255, 255, 0.9);">
-      <a class="navbar-brand" href="index.html"><img src="images/greyclaw.png" height="30" width ="30"></a>
+           <nav class="navbar fixed-top navbar-expand-sm navbar-light" style="background-color: rgba(255, 255, 255, 0.9);">
+             <a class="navbar-brand" href="index.html"><img src="images/greyclaw.png" height="30" width ="30"></a>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                 <span class="navbar-toggler-icon"></span>
+               </button>
+               <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                 <ul class="navbar-nav mr-auto">
+                   <li class="nav-item">
+                     <a class="nav-link" href="index.html">Crab...<span class="sr-only">(current)</span></a>
+                   </li>
+                   <li class="nav-item active">
+                     <a class="nav-link" href="#Crab-Wears">WEARS</a>
+                   </li>
+                   <li class="nav-item">
+                     <a class="nav-link" href="crabdraws.html">DRAWS</a>
+                   </li>
+                   <li class="nav-item">
+                     <a class="nav-link" href="crabrecommends.html">RECOMMENDS</a>
+                   </li>
+                 </ul>
+                 <span class="social-nav">
+                   <a href="https://www.facebook.com/crab.obeverley"><img src="images/facebook-button.svg" height="30" alt="facebook button"></a>
+                 </span>
+                 <span class="social-nav">
+                   <a href="https://twitter.com/CodeFirstGirls"><img src="images/twitter-button.svg" height="30" alt="twitter button"></a>
+                 </span>
+                 <span class="social-nav">
+                   <a href="https://www.instagram.com/just_crab_"><img src="images/instagram-button.svg" height="30" alt="instagram button"></a>
+                 </span>
+               </div>
+             </div>
+           </nav>
+      <!--- End of Navigation --->
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#About-Crab">Crab...<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="crabwears.html">wears</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="crabdraws.html">draws</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="crabrecommends.html">recommends</a>
-            </li>
-          </ul>
-          <span class="social-nav">
-            <a href="https://www.facebook.com/crab.obeverley"><img src="images/facebook-button.svg" height="30" alt="facebook button"></a>
-          </span>
-          <span class="social-nav">
-            <a href="https://twitter.com/CodeFirstGirls"><img src="images/twitter-button.svg" height="30" alt="twitter button"></a>
-          </span>
-          <span class="social-nav">
-            <a href="https://www.instagram.com/just_crab"><img src="images/instagram-button.svg" height="30" alt="instagram button"></a>
-          </span>
-        </div>
-      </div>
-    </nav>
-    <!--- End of Navigation --->
+
 <h1 id="header" class="centered">I wear</h1>
   <div class="parallax">
   </div>
 
-<section id=Crab Wears>
+<section id=Crab-Wears>
 <div class="contrast">
   <div container>
       <div class="row px-2">
