--- a/crabwears.html
+++ b/crabwears.html
@@ -107,10 +107,10 @@
                     <div class="col-lg-10 col-lg-offset-1 text-center">
                            <br>
                              <ul class="list-inline social">
-                                     <a href="https://www.instagram.com/just_crab_/" target="_blank"><i class="fa fa-instagram fa-fw fa-2x"></i></a>
-                                     <a href="https://twitter.com/CodeFirstGirls" target="_blank"><i class="fa fa-twitter fa-fw fa-2x"></i></a>
-                                     <a href="https://www.facebook.com/codefirstgirls/" target="_blank"><i class="fa fa-facebook fa-fw fa-2x"></i></a>
-                                     <a href="mailto:crab@justcrab.com" target="_blank"><i class="fa fa-envelope-o fa-fw fa-2x"></i></a>
+                                     <a href="https://www.instagram.com/just_crab_/" target="_blank"><i class="fa fa-instagram fa-fw fa-2x align:center"></i></a>
+                                     <a href="https://twitter.com/CodeFirstGirls" target="_blank"><i class="fa fa-twitter fa-fw fa-2x align:center"></i></a>
+                                     <a href="https://www.facebook.com/codefirstgirls/" target="_blank"><i class="fa fa-facebook fa-fw fa-2x align:center"></i></a>
+                                     <a href="mailto:crab@justcrab.com" target="_blank"><i class="fa fa-envelope-o fa-fw fa-2x align:center"></i></a>
 
                             </ul>
   <div class:"footerline":>
