crabwears fixed image margin
image under i set trends

--- a/crabwears.html
+++ b/crabwears.html
@@ -60,11 +60,10 @@
   <div container>
       <div class="row px-2">
           <div class="col-sm">
-            <h12>i set trends.</12>
-            <img src="images/tommycrab.jpg" class="img-fluid imageshadow">
+            <h11>i set trends.</h11>
+            <img src="images/tommycrab.jpg" align="left" class="img-fluid imageshadow">
           </div>
           <div class="col-sm">
-            <br>
             <br>
             <br>
             <br>
@@ -77,9 +76,6 @@
           </div>
       </div>
     </div>
-          <br>
-          <br>
-          <br>
           <br>
           <br>
           <br>
