another caps on image name

--- a/crabrecommends.html
+++ b/crabrecommends.html
@@ -97,7 +97,7 @@
               </div>
             </div>
           <div class="card">
-            <img class="card-img-top" "fs-gal" src="images/Tanning.jpg" alt="Dorothy Tanning" data-url="images/tanning.jpg">
+            <img class="card-img-top" "fs-gal" src="images/Tanning.jpg" alt="Dorothy Tanning" data-url="images/Tanning.jpg">
             <div class="card-body">
               <h5 class="card-title">Dorothea Tanning • Tate Modern<br>27 February – June 2019</h5>
               <span id="dots3"></span><span id="more3">
@@ -120,7 +120,7 @@
           </div>
         </div>
         <div class="card">
-          <img class="card-img-top" "fs-gal" src="images/Greatwomenartistsexhibition.jpg" alt="In the Company Of" data-url="images/greatwomenartistsexhibition.jpg">
+          <img class="card-img-top" "fs-gal" src="images/Greatwomenartistsexhibition.jpg" alt="In the Company Of" data-url="images/Greatwomenartistsexhibition.jpg">
             <div class="card-body">
               <h5 class="card-title">In the Company of • TJ Boulting<br>16th September - 7th November</h5>
               <span id="dots5"></span><span id="more5">
